--- a/src/client/styles/_objects.list-item.less
+++ b/src/client/styles/_objects.list-item.less
@@ -6,7 +6,7 @@
     *
     *  Image to the left of the text. Primarily used in the sidebar.
     */
-      
+
     .list-item {
       width: 100%;
       height: 138px;
@@ -17,9 +17,10 @@
 
       > .list-item__image {
         display: inline-block;
-        width: 116px;
-        height: 118px;
-        
+        margin-top:5px;
+        width: 100px;
+        height: 100px;
+
         > div {
           height: 100%;
 
@@ -31,7 +32,7 @@
         position: relative;
 
         display: inline-block;
-        width: ~'calc(100% - 130px)';
+        width: ~'calc(100% - 120px)';
         height: 100%;
         margin-left: 10px;
 
@@ -47,7 +48,7 @@
           width: 100%;
           height: 43px;
           margin-bottom: 0;
-          
+
           color: #595959;
         }
       }
@@ -58,19 +59,19 @@
     *
     *  This version omits the comment.
     */
-      
+
     .list-item--square {
       display: inline-block;
       width: 150px;
       height: auto;
       padding: 0;
       margin: 0 10px 15px 0;
-      
+
       > .list-item__image {
         display: block;
         width: 100%;
         height: 100px;
-        
+
         background-position: 50%;
         background-size: cover; }
 
@@ -96,7 +97,7 @@
     *
     *  Larger image, and contains a comment box.
     */
-      
+
     .list-item--large {
       width: 100%;
       padding: 10px;
@@ -108,7 +109,7 @@
         display: inline-block;
         width: 116px;
         height: 116px;
-        
+
         background-position: 50%;
         background-size: cover; }
 
